--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,38 @@
 version: '3.8'
 
 services:
-  php:
-    build: 
+  web:
+    build:
       context: .
       dockerfile: Dockerfile
-    container_name: php-container
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: jwt_api
-      MYSQL_USER: root
-      MYSQL_RANDOM_ROOT_PASSWORD: "yes"
-    volumes:
-      - .:/var/www/html
+    container_name: php-apache-container
     ports:
       - "8080:80"
-  
-  mysql:
-    image: mysql:8.0.30
+    volumes:
+      - .:/var/www/html
+    depends_on:
+      - db
+
+  db:
+    image: mysql:8.0
     container_name: mysql-container
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: jwt_api
       MYSQL_USER: root
-      MYSQL_RANDOM_ROOT_PASSWORD: "yes"
+      MYSQL_PASSWORD: root
     ports:
       - "3306:3306"
     volumes:
-      - mysql_data:/var/lib/mysql
+      - db_data:/var/lib/mysql
+
+  composer:
+    image: composer:2
+    container_name: composer-container
+    volumes:
+      - .:/app
+    working_dir: /app
+    command: ["composer", "install"]
 
 volumes:
-  mysql_data:
+  db_data:
